--- a/paper/references.bib
+++ b/paper/references.bib
@@ -254,8 +254,9 @@
 
 @misc{orca2024base64,
   author       = {{Orca Security}},
-  title        = {{GitHub} Advanced Security Evasion via Base64 Encoding},
+  title        = {How We Found a Bypass in {GitHub} Secret Scanning via Base64 Encoding},
   year         = {2024},
+  howpublished = {\url{https://orca.security/resources/blog/github-secret-scanning-bypass-base64/}},
 }
 
 @misc{wiz2025scanning,
@@ -295,9 +296,10 @@
 }
 
 @misc{dockerdash2025,
-  author       = {{Security Researchers}},
+  author       = {Levi, Sasi and {Noma Security}},
   title        = {{DockerDash}: Malicious Docker Image Label Exploit via {Gordon AI}},
   year         = {2025},
+  howpublished = {\url{https://noma.security/dockerdash-exploit/}},
   key          = {DockerDash},
 }
 
@@ -306,4 +308,73 @@
   title        = {Container Escape Vulnerabilities for {AI} Agents},
   year         = {2025},
   howpublished = {\url{https://blaxel.ai/blog/container-escape}},
+}
+
+% ============================================================
+% Additional References (Adversarial Fact-Check Additions)
+% ============================================================
+
+@inproceedings{wu2025isolategpt,
+  author    = {Wu, Yi and others},
+  title     = {{IsolateGPT}: Transparent Isolation for {LLM}-Integrated Applications},
+  booktitle = {ISOC Network and Distributed System Security Symposium (NDSS)},
+  year      = {2025},
+}
+
+@article{deng2024agents,
+  author  = {Deng, Yifeng and others},
+  title   = {{AI} Agents Under Threat: A Survey of Key Security Challenges and Future Pathways},
+  journal = {ACM Computing Surveys},
+  year    = {2024},
+}
+
+@misc{csa2025maestro,
+  author       = {{Cloud Security Alliance}},
+  title        = {{MAESTRO}: Multi-Agent Security Taxonomy, Risks, and Opportunities},
+  year         = {2025},
+  howpublished = {\url{https://cloudsecurityalliance.org/research/topics/maestro}},
+}
+
+@misc{google2025secureagents,
+  author       = {D{\'\i}az, Santiago and Kern, Christoph and Olive, Olivia},
+  title        = {Designing Secure {AI} Agents},
+  year         = {2025},
+  howpublished = {Google Security Blog},
+}
+
+@misc{safemcp2025,
+  author       = {{Linux Foundation}},
+  title        = {{SAFE-MCP}: Security Assurance Framework for Enterprise {MCP} Deployments},
+  year         = {2025},
+  howpublished = {\url{https://safemcp.org/}},
+}
+
+@misc{e2b2025,
+  author       = {{E2B}},
+  title        = {{E2B} Sandboxes: Secure Code Execution for {AI} Agents},
+  year         = {2025},
+  howpublished = {\url{https://e2b.dev/}},
+  note         = {Firecracker-based microVM sandboxing},
+}
+
+@misc{daytona2025,
+  author       = {{Daytona}},
+  title        = {Daytona Sandboxes: Sub-90ms Cold Start Secure Environments},
+  year         = {2025},
+  howpublished = {\url{https://daytona.io/}},
+}
+
+@misc{gitguardian2025smithery,
+  author       = {{GitGuardian}},
+  title        = {Smithery {MCP} Registry Vulnerability Disclosure},
+  year         = {2025},
+  howpublished = {\url{https://blog.gitguardian.com/smithery-mcp-vulnerability/}},
+}
+
+@misc{cve2024_1086poc,
+  author       = {Notselwyn},
+  title        = {{CVE}-2024-1086: Universal Local Privilege Escalation---nf\_tables Use-After-Free},
+  year         = {2024},
+  howpublished = {\url{https://github.com/Notselwyn/CVE-2024-1086}},
+  note         = {PoC qualified for Google KernelCTF},
 }
